# squeeshy-rs

./: Cargo.toml  justfile
.cargo/: config.toml
crates/squeeshy/: Cargo.toml
crates/squeeshy-common/: Cargo.toml
crates/squeeshy-common/src/: lib.rs  module_id.rs
crates/squeeshy-error/: Cargo.toml
crates/squeeshy-oxc/: Cargo.toml
crates/squeeshy-resolver/: Cargo.toml
crates/squeeshy/examples/: basic.rs
crates/squeeshy/src/: lib.rs
