[package]
name = "squeeshy-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
derivative = { workspace = true }
oxc = { workspace = true }
rustc-hash = { workspace = true }
index_vec = { workspace = true }
sugar_path = { workspace = true }

[lints]
workspace = true
