[package]
name = "squeeshy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
derivative = { workspace = true }
sugar_path = { workspace = true }
oxc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "rt",
    "macros",
    "rt-multi-thread",
    "sync",
] }
rustc-hash = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
index_vec = { workspace = true }
futures = "0.3.25"
rayon = "1.6.0"
string_wizard = { workspace = true }

[dev_dependencies]
insta = { workspace = true }
testing_macros = { workspace = true }

[lints]
workspace = true
